# claude-code-logger

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py  requirements.txt
src/cc_logger/: auth.py  cli.py  hooks.py  uploader.py
src/cc_logger/scripts/: install.sh  uninstall.sh
