[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-logger"
version = "0.1.3"
description = "Claude Code uploader: authenticate once, then auto-sync ~/.claude/projects to S3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.28",
]
license = {file = "LICENSE"}
authors = [{name = "Sanjay"}]

[project.scripts]
cc-logger = "cc_logger.cli:main"
cc-logger-hook = "cc_logger.hooks:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cc_logger = ["scripts/*.sh"]
